--- a/About Us/AboutUsStyle.css
+++ b/About Us/AboutUsStyle.css
@@ -21,7 +21,7 @@
 }
 
 section{
-    padding: 50px 100px;
+    padding: 50px 30px 50px 100px;
 }
 
 img{
@@ -54,6 +54,10 @@ header {
 
 .logo img{
     width: 90px;
+}
+
+.dropdown{
+    display: none;
 }
 
 .navbar {
@@ -118,13 +122,6 @@ header {
     background-color: var(--button-color);
 } */
 
-#menu-icon{
-    color: var(--second-color);
-    font-size: 24px;
-    z-index: 100001;
-    cursor: pointer;
-    display: none;
-}
 
 /* section profileupper "About Us TeavoU" */
 .profileupper{
@@ -234,8 +231,11 @@ header {
 
 /* section profilecentre "About Us TeavoU" */
 .profilecentre {
-    width: 100%;
-    display: table;
+    display: inline-flex;
+    padding: 44px 81px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
 }
 
 .flex-container {
@@ -434,9 +434,23 @@ header {
 }
 
 .TeavoUTeamcard {
-    display: flex;
+    display: inline-flex;
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 10px;
     width: 100%;
 }
+.TeavoUTeamcard-left{
+    display: flex;
+    flex: 50%;
+}
+
+.TeavoUTeamcard-right{
+    display: flex;
+    flex-direction: row;
+    flex: 50%;
+}
+
 .TeavoUTeamcard-text{
     color: black;
     font-size: small;
@@ -448,7 +462,13 @@ header {
     /* background-color: #f1f1f1; */
     padding: 1.3rem;
 }
-.TeavoUTeamcard > div:hover{
+.TeavoUTeamcard-left > div:hover{
+    background: var(--main-color);
+    color: #FFFF;
+    border-radius: 0.2rem;
+    transition: 0.2 all linear;
+}
+.TeavoUTeamcard-right > div:hover{
     background: var(--main-color);
     color: #FFFF;
     border-radius: 0.2rem;
@@ -706,16 +726,83 @@ footer {
 }
 
    /* Footer Styling */
+
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 768px) {
-    .leftcolumn, .rightcolumn {   
-    width: 100%;
-    padding: 0;
+@media only screen and (max-width: 768px) {
+    section{
+        max-width: 768px;
     }
-}
-@media (max-width:768px) {
+
+    header {
+        position: fixed;
+        width: 100%;
+        height: 40px;
+        top: 0;
+        right: 0;
+        z-index: 1000;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 35px 0.9rem;
+        background-color: #ffffff;
+    }
+
+    .navbar{
+        display: none;
+    }
+    .TeavoUTeamcard{
+        width: 80%;
+    }
+    .TeavoUTeamcard-left, .TeavoUTeamcard-right{
+        flex-wrap: wrap;
+        flex: 10%;
+    }
     .flex-item-right, .flex-item-left, .bottomcentre-left, .bottomcentre-right {
-    flex: 60%;
-      /* width: 50%; */
-    }
+        flex: 100%;
+          /* width: 50%; */
+        }
+/* navbar dropdown */
+.dropbtn {
+background-color: #04AA6D;
+color: white;
+padding: 16px;
+font-size: 16px;
+border: none;
+cursor: pointer;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+background-color: #3e8e41;
+}
+
+.dropdown {
+position: relative;
+display: inline-block;
+}
+
+.dropdown-content {
+display: none;
+position: absolute;
+background-color: #f1f1f1;
+min-width: 160px;
+overflow: auto;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+right: 0;
+z-index: 1;
+}
+
+.dropdown-content a {
+color: black;
+padding: 12px 16px;
+text-decoration: none;
+display: block;
+}
+
+.dropdown a:hover {
+    background-color: #ddd;
+}
+
+.show {
+    display: block;
+}
 }
