--- a/quiz/quiz.css
+++ b/quiz/quiz.css
@@ -21,7 +21,9 @@
     --bg-color:#FFFFFF;
 }
 
-
+section{
+  padding: 50px 30px 50px 100px;
+}
 header{
     position: fixed;
     width: 100%;
@@ -40,6 +42,10 @@ header{
     width: 90px;
   }
 
+
+  .dropdown{
+    display: none;
+}
 
   .navbar {
     display: flex;
@@ -131,11 +137,11 @@ body {
     padding-bottom:10px;
     margin-top:50px;;
 }
- 
+
 #user-score {
     color: #99BC43;
- }
- 
+}
+
 #total-score {
     color: #628900
 }
@@ -171,10 +177,71 @@ body {
     padding: 10px;
     order: 3;
 }
- 
+
 .controls {
     padding: 10px;
     order: 4;
 }
 .hide {
-    display: none;}
+    display: none;
+}
+/* Responsive layout - when the screen is less than 768px wide, make the two columns stack on top of each other instead of next to each other */
+@media only screen and (max-width: 768px) {
+    section{
+        max-width: 768px;
+    }
+    header {
+        position: fixed;
+        width: 100%;
+        height: 40px;
+        top: 0;
+        right: 0;
+        z-index: 1000;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 35px 0.9rem;
+        background-color: #ffffff;
+    }
+    .navbar{
+        display: none;
+    }
+/* navbar dropdown */
+.dropbtn {
+  background-color: #607e13;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  }
+  .dropbtn:hover, .dropbtn:focus {
+  background-color: var(--button-color);
+  }
+  .dropdown {
+  position: relative;
+  display: inline-block;
+  }
+  .dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  right: 0;
+  z-index: 1;
+  }
+  .dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  }
+  .dropdown a:hover {
+    background-color: var(--button-color);
+  }
+  .show {
+      display: block;
+  }
+}
