--- a/Home/HomeStyle.css
+++ b/Home/HomeStyle.css
@@ -21,7 +21,7 @@
 }
 
 section{
-    padding: 50px 100px;
+    padding: 50px 30px 50px 100px;
 }
 
 img{
@@ -50,6 +50,10 @@ header {
 
 .logo img {
     width: 90px;
+}
+
+.dropdown{
+    display: none;
 }
 
 .navbar {
@@ -947,7 +951,11 @@ footer {
 /* ===================================== */
 /* Responsive Breakpoint Max Width 768px */
 /* ===================================== */
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 768px) {
+    section{
+        max-width: 768px;
+    }
+
     header {
         position: fixed;
         width: 100%;
@@ -959,7 +967,7 @@ footer {
         justify-content: space-between;
         align-items: center;
         padding: 35px 0.9rem;
-        background-color: #4A6409;
+        background-color: #ffffff;
     }
     
     .navbar{
@@ -978,6 +986,45 @@ footer {
     
     .logo{
         bottom: 20rem;
+    }
+
+    /* navbar dropdown */
+.dropbtn {
+    background-color: #607e13;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    }
+    .dropbtn:hover, .dropbtn:focus {
+    background-color: var(--button-color);
+    }
+    .dropdown {
+    position: relative;
+    display: inline-block;
+    }
+    .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    right: 0;
+    z-index: 1;
+    }
+    .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    }
+    .dropdown a:hover {
+    background-color: var(--button-color);
+    }
+    .show {
+        display: block;
     }
 
     /* ===== HOME ===== */
